[tool.poetry]
name = "fastzdp-redis"
version = "0.1.0"
description = "FastZDP框架体系下操作Redis的国产框架, 低代码开发, 简单易用, 提高企业项目开发效率"
authors = ["张大鹏 <1156956636@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = {extras = ["hiredis"], version = "^5.0.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
